--- a/EasySaveApp.csproj
+++ b/EasySaveApp.csproj
@@ -19,4 +19,8 @@
     <None Remove=".gitignore" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Newtonsoft.Json.Bson" Version="1.0.2" />
+  </ItemGroup>
+
 </Project>
