--- a/Settings.json
+++ b/Settings.json
@@ -1,1 +1,1 @@
-{"TypeOfLog":"json","ExtensionToCrypt":"doc","ProcessToStop":""}
+{"TypeOfLog":"json","ExtensionToCrypt":"doc","ProcessToStop":"","PriorityFiles":"json "}
